[tool.poetry]
name = "golang-versions-api"
version = "0.7.1"
description = ""
authors = ["Patrick <pvilchez794@gmail.com>"]
readme = "README.md"
packages = [{include = "golang_versions_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.93.0"
uvicorn = {extras = ["standard"], version = "^0.21.0"}
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
