[tool.poetry]
name = "golang-versions-api"
version = "0.7.1"
description = ""
authors = ["Patrick <pvilchez794@gmail.com>"]
readme = "README.md"
packages = [{ include = "golang_versions_api" }]


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.93.0"
uvicorn = { extras = ["standard"], version = "^0.21.0" }
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
ruff = "^0.0.280"
black = "^23.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
strict = true


[tool.ruff]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]
